--- a/src/dotnet/commands/dotnet-new/CSharp_Console/project.json.template
+++ b/src/dotnet/commands/dotnet-new/CSharp_Console/project.json.template
@@ -4,11 +4,11 @@
     "emitEntryPoint": true
   },
   "dependencies": {
-    "NETStandard.Library": "1.5.0-rc2-23911"
+    "Microsoft.NETCore.App": "1.0.0-rc2-23911"
   },
   "frameworks": {
-    "netstandardapp1.5": {
-      "imports": "dnxcore50"
+    "netstandard1.5": {
+      "imports": [ "portable-net45+win8", "dnxcore50" ]
     }
   }
 }
