--- a/src/Microsoft.Extensions.DependencyModel/project.json
+++ b/src/Microsoft.Extensions.DependencyModel/project.json
@@ -26,10 +26,7 @@
     "netstandard1.3": {
       "imports": "dnxcore50",
       "dependencies": {
-        "System.IO.FileSystem": "4.0.1-rc2-23922",
-        "System.Linq": "4.1.0-rc2-23922",
-        "System.Runtime": "4.1.0-rc2-23922",
-        "System.Reflection": "4.1.0-rc2-23922",
+        "NETStandard.Library": "1.5.0-rc2-23922",
         "System.Dynamic.Runtime": "4.0.11-rc2-23922"
       }
     }
