--- a/src/dotnet/project.json
+++ b/src/dotnet/project.json
@@ -62,6 +62,7 @@
     "System.Threading.ThreadPool": "4.0.10-rc2-23922",
     "System.Runtime.Serialization.Primitives": "4.1.1-rc2-23922",
     "System.Private.DataContractSerialization": "4.1.1-rc2-23922",
+    "System.Net.Requests": "4.0.11-rc2-23922",
     "Microsoft.Win32.Registry": {
       "version": "4.0.0-rc2-23922",
       "exclude": "compile"
