--- a/src/dotnet/project.json
+++ b/src/dotnet/project.json
@@ -5,6 +5,8 @@
     "embed": {
       "include": [
         "commands/dotnet-new/CSharp_Console.zip",
+        "commands/dotnet-new/CSharp_Lib.zip",
+        "commands/dotnet-new/CSharp_xunittest.zip",
         "commands/dotnet-new/FSharp_Console.zip",
         "commands/dotnet-new/CSharp_Web.zip"
       ]
@@ -13,7 +15,9 @@
       "exclude": [
         "commands/dotnet-new/CSharp_Console/**",
         "commands/dotnet-new/FSharp_Console/**",
-        "commands/dotnet-new/CSharp_Web/**"
+        "commands/dotnet-new/CSharp_Web/**",
+        "commands/dotnet-new/CSharp_Lib/**",
+        "commands/dotnet-new/CSharp_xunittest/**"
       ]
     }
   },
