--- a/src/Microsoft.DotNet.ProjectModel.Workspaces/project.json
+++ b/src/Microsoft.DotNet.ProjectModel.Workspaces/project.json
@@ -4,7 +4,6 @@
     "keyFile": "../../tools/Key.snk"
   },
   "dependencies": {
-    "NETStandard.Library": "1.5.0-rc2-23931",
     "Microsoft.DotNet.ProjectModel": "1.0.0-*",
     "Microsoft.DotNet.Compiler.Common": "1.0.0-*",
     "Microsoft.CodeAnalysis.CSharp.Workspaces": "1.3.0-beta1-20160405-05"
@@ -12,8 +11,9 @@
   "frameworks": {
     "netstandard1.5": {
       "imports": [
-        "dnxcore50",
-        "portable-net45+win8"
+        "portable-net45+wp80+win8+wpa81+dnxcore50",
+        "portable-net45+win8",
+        "dnxcore50"
       ]
     }
   }
