--- a/src/dotnet/project.json
+++ b/src/dotnet/project.json
@@ -25,6 +25,7 @@
     "System.Text.Encoding.CodePages": "4.0.1-rc2-23931",
     "System.Diagnostics.FileVersionInfo": "4.0.0-rc2-23931",
     "System.CommandLine": "0.1.0-e160323-1",
+    "Microsoft.ApplicationInsights": "2.0.0",
     "Microsoft.DotNet.ProjectModel": "1.0.0-*",
     "Microsoft.DotNet.Compiler.Common": "1.0.0-*",
     "Microsoft.DotNet.Cli.Utils": "1.0.0-*",
