--- a/src/Microsoft.DotNet.ProjectModel.Workspaces/project.json
+++ b/src/Microsoft.DotNet.ProjectModel.Workspaces/project.json
@@ -12,8 +12,7 @@
     "netstandard1.5": {
       "imports": [
         "portable-net45+wp80+win8+wpa81+dnxcore50",
-        "portable-net45+win8",
-        "dnxcore50"
+        "portable-net45+win8"
       ]
     }
   }
