--- a/src/Microsoft.DotNet.ProjectModel/project.json
+++ b/src/Microsoft.DotNet.ProjectModel/project.json
@@ -7,8 +7,8 @@
   "dependencies": {
     "Microsoft.Extensions.DependencyModel": "1.0.0-*",
     "Newtonsoft.Json": "7.0.1",
-    "NuGet.Packaging": "3.5.0-beta-1233",
-    "NuGet.RuntimeModel": "3.5.0-beta-1233",
+    "NuGet.Packaging": "3.5.0-rc-1233",
+    "NuGet.RuntimeModel": "3.5.0-rc-1233",
     "System.Reflection.Metadata": "1.3.0-rc2-24027"
   },
   "frameworks": {
