--- a/src/Microsoft.DotNet.ProjectModel/project.json
+++ b/src/Microsoft.DotNet.ProjectModel/project.json
@@ -1,11 +1,11 @@
 {
-  "version": "1.0.0-*",
+  "version": "1.0.0-rc2-*",
   "compilationOptions": {
     "keyFile": "../../tools/Key.snk"
   },
   "description": "Types to model a .NET Project",
   "dependencies": {
-    "Microsoft.Extensions.DependencyModel": "1.0.0-*",
+    "Microsoft.Extensions.DependencyModel": "1.0.0-rc2-*",
     "Newtonsoft.Json": "7.0.1",
     "NuGet.Packaging": "3.5.0-beta",
     "NuGet.RuntimeModel": "3.5.0-beta",
