--- a/src/Microsoft.DotNet.ProjectModel.Loader/project.json
+++ b/src/Microsoft.DotNet.ProjectModel.Loader/project.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0-rc2-preview1-*",
+  "version": "1.0.0-preview1-*",
   "compilationOptions": {
     "keyFile": "../../tools/Key.snk"
   },
