--- a/src/Microsoft.DotNet.Cli.Utils/project.json
+++ b/src/Microsoft.DotNet.Cli.Utils/project.json
@@ -6,10 +6,10 @@
   },
   "dependencies": {
     "Microsoft.DotNet.ProjectModel": "1.0.0-*",
-    "NuGet.Versioning": "3.5.0-beta-1246",
-    "NuGet.Packaging": "3.5.0-beta-1246",
-    "NuGet.Frameworks": "3.5.0-beta-1246",
-    "NuGet.ProjectModel": "3.5.0-beta-1246"
+    "NuGet.Versioning": "3.5.0-beta",
+    "NuGet.Packaging": "3.5.0-beta",
+    "NuGet.Frameworks": "3.5.0-beta",
+    "NuGet.ProjectModel": "3.5.0-beta"
   },
   "frameworks": {
     "net451": {
