--- a/src/Microsoft.DotNet.Files/project.json
+++ b/src/Microsoft.DotNet.Files/project.json
@@ -5,8 +5,8 @@
   },
   "description": "Abstraction to interact with the file system and file paths.",
   "dependencies": {
-    "Microsoft.DotNet.Cli.Utils": "1.0.0-preview1-*",
-    "Microsoft.DotNet.ProjectModel": "1.0.0-rc2-*",
+    "Microsoft.DotNet.Cli.Utils": { "target": "project" },
+    "Microsoft.DotNet.ProjectModel": { "target": "project" },
     "System.Linq.Expressions": "4.0.11-rc2-24027"
   },
   "frameworks": {
