Fix warnings in project.json
PR #2493 introduced the new project.json schema. The tree has 118 files
with the old schema, which added several hundred warnings.

This change can't go in until PR #2864 does - it relies on those bug
fixes.

--- a/src/Microsoft.DotNet.Cli.Utils/project.json
+++ b/src/Microsoft.DotNet.Cli.Utils/project.json
@@ -1,11 +1,13 @@
 {
   "version": "1.0.0-preview2-*",
-  "compilationOptions": {
+  "buildOptions": {
     "keyFile": "../../tools/Key.snk",
     "warningsAsErrors": true
   },
   "dependencies": {
-    "Microsoft.DotNet.ProjectModel": { "target": "project" },
+    "Microsoft.DotNet.ProjectModel": {
+      "target": "project"
+    },
     "NuGet.Versioning": "3.5.0-rc-1285",
     "NuGet.Packaging": "3.5.0-rc-1285",
     "NuGet.Frameworks": "3.5.0-rc-1285",
