--- a/src/Microsoft.DotNet.Compiler.Common/project.json
+++ b/src/Microsoft.DotNet.Compiler.Common/project.json
@@ -1,13 +1,19 @@
 {
   "version": "1.0.0-preview2-*",
-  "compilationOptions": {
+  "buildOptions": {
     "keyFile": "../../tools/Key.snk"
   },
   "dependencies": {
     "Microsoft.CodeAnalysis.CSharp": "1.3.0-beta1-20160429-01",
-    "Microsoft.DotNet.ProjectModel": { "target": "project" },
-    "Microsoft.DotNet.Cli.Utils": { "target": "project" },
-    "Microsoft.DotNet.Files": { "target": "project" }
+    "Microsoft.DotNet.ProjectModel": {
+      "target": "project"
+    },
+    "Microsoft.DotNet.Cli.Utils": {
+      "target": "project"
+    },
+    "Microsoft.DotNet.Files": {
+      "target": "project"
+    }
   },
   "frameworks": {
     "net451": {
@@ -19,10 +25,10 @@
           "type": "build"
         },
         "System.IO": {
-            "type": "build"
+          "type": "build"
         },
         "System.Threading.Tasks": {
-            "type": "build"
+          "type": "build"
         }
       }
     },
