--- a/src/Microsoft.DotNet.Files/project.json
+++ b/src/Microsoft.DotNet.Files/project.json
@@ -1,12 +1,16 @@
 {
   "version": "1.0.0-preview2-*",
-  "compilationOptions": {
+  "buildOptions": {
     "keyFile": "../../tools/Key.snk"
   },
   "description": "Abstraction to interact with the file system and file paths.",
   "dependencies": {
-    "Microsoft.DotNet.Cli.Utils": { "target": "project" },
-    "Microsoft.DotNet.ProjectModel": { "target": "project" },
+    "Microsoft.DotNet.Cli.Utils": {
+      "target": "project"
+    },
+    "Microsoft.DotNet.ProjectModel": {
+      "target": "project"
+    },
     "System.Linq.Expressions": "4.0.11-rc2-24027"
   },
   "frameworks": {
