--- a/src/Microsoft.DotNet.TestFramework/project.json
+++ b/src/Microsoft.DotNet.TestFramework/project.json
@@ -1,16 +1,13 @@
 {
   "version": "1.0.0-preview2-*",
   "description": "Microsoft.DotNet.TestFramework Class Library",
-  "tags": [
-    ""
-  ],
-  "compilationOptions": {
+  "buildOptions": {
     "keyFile": "../../tools/Key.snk"
   },
-  "projectUrl": "",
-  "licenseUrl": "",
   "dependencies": {
-    "Microsoft.DotNet.Cli.Utils": { "target": "project" }
+    "Microsoft.DotNet.Cli.Utils": {
+      "target": "project"
+    }
   },
   "frameworks": {
     "netstandard1.5": {
@@ -18,6 +15,13 @@
         "portable-net45+wp80+win8+wpa81+dnxcore50"
       ]
     },
-    "net451": { }
+    "net451": {}
+  },
+  "packOptions": {
+    "projectUrl": "",
+    "licenseUrl": "",
+    "tags": [
+      ""
+    ]
   }
 }
