--- a/src/Microsoft.DotNet.Files/project.json
+++ b/src/Microsoft.DotNet.Files/project.json
@@ -11,7 +11,7 @@
     "Microsoft.DotNet.ProjectModel": {
       "target": "project"
     },
-    "System.Linq.Expressions": "4.0.11-rc2-24027"
+    "System.Linq.Expressions": "4.1.0-rc3-24113-00"
   },
   "frameworks": {
     "net451": {
