--- a/src/Microsoft.DotNet.ProjectModel.Loader/project.json
+++ b/src/Microsoft.DotNet.ProjectModel.Loader/project.json
@@ -7,7 +7,7 @@
     "Microsoft.DotNet.ProjectModel": {
       "target": "project"
     },
-    "System.Runtime.Loader": "4.0.0-rc2-24027"
+    "System.Runtime.Loader": "4.0.0-rc3-24113-00"
   },
   "frameworks": {
     "netstandard1.5": {
