--- a/src/dotnet/project.json
+++ b/src/dotnet/project.json
@@ -26,8 +26,8 @@
     },
     "NuGet.CommandLine.XPlat": "3.5.0-rc-1285",
     "Newtonsoft.Json": "7.0.1",
-    "System.Text.Encoding.CodePages": "4.0.1-rc2-24027",
-    "System.Diagnostics.FileVersionInfo": "4.0.0-rc2-24027",
+    "System.Text.Encoding.CodePages": "4.0.1-rc3-24113-00",
+    "System.Diagnostics.FileVersionInfo": "4.0.0-rc3-24113-00",
     "Microsoft.ApplicationInsights": "2.0.0",
     "Microsoft.DotNet.ProjectModel": {
       "target": "project"
@@ -41,19 +41,19 @@
     "Microsoft.Extensions.Testing.Abstractions": {
       "target": "project"
     },
-    "Microsoft.NETCore.ConsoleHost": "1.0.0-rc2-24027",
-    "Microsoft.NETCore.TestHost": "1.0.0-rc2-24027",
+    "Microsoft.NETCore.ConsoleHost": "1.0.0-rc3-24113-00",
+    "Microsoft.NETCore.TestHost": "1.0.0-rc3-24113-00",
     "Microsoft.NETCore.App": {
       "type": "platform",
       "version": "1.0.0-rc3-*"
     },
-    "System.Diagnostics.TraceSource": "4.0.0-rc2-24027",
-    "System.Diagnostics.TextWriterTraceListener": "4.0.0-rc2-24027",
-    "System.Resources.ReaderWriter": "4.0.0-rc2-24027",
-    "System.Runtime.Serialization.Primitives": "4.1.1-rc2-24027",
-    "System.Private.DataContractSerialization": "4.1.1-rc2-24027",
+    "System.Diagnostics.TraceSource": "4.0.0-rc3-24113-00",
+    "System.Diagnostics.TextWriterTraceListener": "4.0.0-rc3-24113-00",
+    "System.Resources.Writer": "4.0.0-rc3-24109-00",
+    "System.Runtime.Serialization.Primitives": "4.1.1-rc3-24113-00",
+    "System.Private.DataContractSerialization": "4.1.1-rc3-24113-00",
     "Microsoft.Win32.Registry": {
-      "version": "4.0.0-rc2-24027",
+      "version": "4.0.0-rc3-24113-00",
       "exclude": "compile"
     }
   },
