--- a/src/dotnet/project.json
+++ b/src/dotnet/project.json
@@ -50,6 +50,7 @@
     "System.Resources.Writer": "4.0.0-rc3-24109-00",
     "System.Runtime.Serialization.Primitives": "4.1.1-rc3-24113-00",
     "System.Private.DataContractSerialization": "4.1.1-rc3-24113-00",
+    "System.Text.RegularExpressions": "4.1.0-rc3-24113-00",
     "Microsoft.Win32.Registry": {
       "version": "4.0.0-rc3-24113-00",
       "exclude": "compile"
