Move the Microsoft.NETCore.App dependency under the Framework
As per #2970, this PR moves the main metapackage dependency under the
framework. In the F# project.json, it moves *just this* under the
framework, while the F# Core package remains under general
dependencies. The rationale is that since this is an F# project, this
packages is needed for all TFMs in the project.

Fixes #2970

--- a/src/dotnet/commands/dotnet-new/CSharp_Console/project.json.template
+++ b/src/dotnet/commands/dotnet-new/CSharp_Console/project.json.template
@@ -4,13 +4,15 @@
     "emitEntryPoint": true
   },
   "dependencies": {
-    "Microsoft.NETCore.App": {
-      "type": "platform",
-      "version": "1.0.0-rc3-004312"
-    }
   },
   "frameworks": {
     "netcoreapp1.0": {
+      "dependencies": {
+        "Microsoft.NETCore.App": {
+          "type": "platform",
+          "version": "1.0.0-rc3-004312"
+        }
+      },
       "imports": "dnxcore50"
     }
   }
