Update dotnet-new project.json templates
Now that Microsoft.NETCore.App is built in a separate repo, we don't need the project.json.pretemplate files.

--- a/src/dotnet/commands/dotnet-new/FSharp_Console/project.json.template
+++ b/src/dotnet/commands/dotnet-new/FSharp_Console/project.json.template
@@ -13,7 +13,7 @@
     "Microsoft.FSharp.Core.netcore": "1.0.0-alpha-160316",
     "Microsoft.NETCore.App": {
       "type": "platform",
-      "version": "$(NetCoreAppVersion)"
+      "version": "1.0.0-rc3-004306"
     }
   },
   "tools": {
