Microsoft.NETCore.App no longer supports netstandard
Any project that references Microsoft.NETCore.App must target netcoreapp1.0.

Moving app projects to netcoreapp1.0; moving library projects to reference NETStandard.Library.

--- a/src/compilers/project.json
+++ b/src/compilers/project.json
@@ -13,7 +13,7 @@
     "Microsoft.DiaSymReader.Native": "1.4.0-rc"
   },
   "frameworks": {
-    "netstandard1.5": {
+    "netcoreapp1.0": {
       "imports": [
         "dnxcore50",
         "portable-net45+win8"
