--- a/src/Microsoft.DotNet.Archive/project.json
+++ b/src/Microsoft.DotNet.Archive/project.json
@@ -8,7 +8,12 @@
     "NETStandard.Library": "1.6.0-rc3-24201-00"
   },
   "frameworks": {
-    "netstandard1.0": {}
+    "net45": {},
+    "netstandard1.3": {
+      "dependencies": {
+        "System.Linq.Parallel": "4.0.1-rc3-24201-00"
+      }
+    }
   },
   "scripts": {}
 }
