--- a/src/Microsoft.DotNet.ProjectModel/project.json
+++ b/src/Microsoft.DotNet.ProjectModel/project.json
@@ -8,7 +8,7 @@
     "Microsoft.Extensions.DependencyModel": {
       "target": "project"
     },
-    "Newtonsoft.Json": "7.0.1",
+    "Newtonsoft.Json": "9.0.1-beta1",
     "NuGet.Packaging": "3.5.0-beta2-1392",
     "NuGet.RuntimeModel": "3.5.0-beta2-1392",
     "System.Reflection.Metadata": "1.3.0-rc3-24206-00"
