--- a/src/dotnet/project.json
+++ b/src/dotnet/project.json
@@ -25,7 +25,7 @@
       "exclude": "compile"
     },
     "NuGet.CommandLine.XPlat": "3.5.0-beta2-1392",
-    "Newtonsoft.Json": "7.0.1",
+    "Newtonsoft.Json": "9.0.1-beta1",
     "System.Text.Encoding.CodePages": "4.0.1-rc3-24206-00",
     "System.Diagnostics.FileVersionInfo": "4.0.0-rc3-24206-00",
     "Microsoft.ApplicationInsights": "2.0.0",
