--- a/src/dotnet/project.json
+++ b/src/dotnet/project.json
@@ -21,10 +21,10 @@
   },
   "dependencies": {
     "NuGet.Commands": {
-      "version": "3.5.0-rc-1285",
+      "version": "3.5.0-beta2-1392",
       "exclude": "compile"
     },
-    "NuGet.CommandLine.XPlat": "3.5.0-rc-1285",
+    "NuGet.CommandLine.XPlat": "3.5.0-beta2-1392",
     "Newtonsoft.Json": "7.0.1",
     "System.Text.Encoding.CodePages": "4.0.1-rc3-24206-00",
     "System.Diagnostics.FileVersionInfo": "4.0.0-rc3-24206-00",
