--- a/src/compilers/project.json
+++ b/src/compilers/project.json
@@ -10,7 +10,7 @@
     },
     "Microsoft.CodeAnalysis.CSharp": "1.3.0-beta1-20160606-02",
     "Microsoft.Net.Compilers.netcore": "1.3.0-beta1-20160606-02",
-    "Microsoft.DiaSymReader.Native": "1.4.0-rc"
+    "Microsoft.DiaSymReader.Native": "1.4.0-rc2"
   },
   "frameworks": {
     "netcoreapp1.0": {
