--- a/src/dotnet/commands/dotnet-new/CSharp_Lib/project.json.template
+++ b/src/dotnet/commands/dotnet-new/CSharp_Lib/project.json.template
@@ -1,10 +1,13 @@
 {
   "version": "1.0.0-*",
+  "buildOptions": {
+    "debugType": "portable"
+  },
   "dependencies": {
   },
   "frameworks": {
     "netstandard1.6": {
-        "NETStandard.Library": "1.5.0-rc3-24126-00"
+      "NETStandard.Library": "1.5.0-rc3-24126-00"
     }
   }
 }
