--- a/src/dotnet/commands/dotnet-new/CSharp_xunittest/project.json.template
+++ b/src/dotnet/commands/dotnet-new/CSharp_xunittest/project.json.template
@@ -1,26 +1,28 @@
 {
-    "version": "1.0.0-*",
+  "version": "1.0.0-*",
+  "buildOptions": {
+    "debugType": "portable"
+  },
+  "dependencies": {
+    "System.Runtime.Serialization.Primitives": "4.1.1-rc3-24127-01",
+    "xunit": "2.1.0",
+    "dotnet-test-xunit": "1.0.0-rc2-192208-24"
+  },
 
-    "dependencies": {
-        "System.Runtime.Serialization.Primitives": "4.1.1-rc3-24127-01",
-        "xunit": "2.1.0",
-        "dotnet-test-xunit": "1.0.0-rc2-192208-24"
-    },
+  "testRunner": "xunit",
 
-    "testRunner":  "xunit",
-
-    "frameworks": {
-        "netcoreapp1.0": {
-            "dependencies": {
-                "Microsoft.NETCore.App": {
-                    "type": "platform",
-                    "version": "1.0.0-rc3-004312"
-                }
-            },
-            "imports": [
-                "dotnet5.4",
-                "portable-net451+win8"
-            ]
+  "frameworks": {
+    "netcoreapp1.0": {
+      "dependencies": {
+        "Microsoft.NETCore.App": {
+          "type": "platform",
+          "version": "1.0.0-rc3-004312"
         }
+      },
+      "imports": [
+        "dotnet5.4",
+        "portable-net451+win8"
+      ]
     }
+  }
 }
